Fixed layout problems on smaller screens

--- a/TellMeAdmin/css/lp.css
+++ b/TellMeAdmin/css/lp.css
@@ -1,70 +1,69 @@
 .lpbot {
-  background-color: #343c3e;
-  bottom: 0;
-  width: 100%;
-  position: absolute;
+    background-color: #343c3e;
+    bottom: 0;
+    width: 100%;
+    position: absolute;
 }
-.circ {
-  height: 15%;
-  width: 15%;
-  border-radius: 4%;
-  margin: 3em 5%;
-}
-.lpwin {
-  margin-left: 49.5%;
-  float: left;
-  position: absolute;
-  padding-top: 1.1em;
-}
-.lp {
-  overflow: hidden;
-}
-.login {
-  margin-top: 200px;
-  height : 300px;
-  width: 100%;
-  padding: 2em;
-col-md-1
-  position: relative;
-  z-index: -0;
-}
-.white {
-  float: right;
-  font-size: 18px;
-  color: white !important;
-}
-h {
 
-  color: #343c3e;
-  font-family: 'Oswald', sans-serif;
-  font-size: 60px;
+.circ {
+    height: 15%;
+    width: 15%;
+    border-radius: 4%;
+    margin: 3em 5%;
 }
-.lp p{font-family: 'Montserrat', sans-serif;
-margin-bottom: 1.2em;color: #343c3e;}
-span{color: white;}
+
+.login {
+    height: 300px;
+    width: 100%;
+    padding: 2em;
+    position: relative;
+}
+
+.white {
+    float: right;
+    font-size: 18px;
+    color: white !important;
+}
+
+h {
+    color: #343c3e;
+    font-family: 'Oswald', sans-serif;
+    font-size: 60px;
+}
+
+.lp p {
+    font-family: 'Montserrat', sans-serif;
+    margin-bottom: 1.2em;
+    color: #343c3e;
+}
+
+span {
+    color: white;
+}
+
 .button-two {
-  border-radius: 4px;
-  background-color:#343c3e;
-  border: none;
-  padding: 10px;
-  width: 200px;
-  transition: all 0.5s;
-  text-align: center;
-  cursor: pointer;
-  font-size:24px;
+    border-radius: 4px;
+    background-color: #343c3e;
+    border: none;
+    padding: 10px;
+    width: 200px;
+    transition: all 0.5s;
+    text-align: center;
+    cursor: pointer;
+    font-size: 24px;
 }
+
 .button-two:hover {
-  /*padding-bottom: 120px;*/
-  background-color: #ee2d24;
+    background-color: #ee2d24;
 }
+
 .button-two:hover span:after {
-  opacity: 1;
+    opacity: 1;
 }
+
 .login img {
-  height: 250px;
-  width: 244px;
-  margin-right: 49.5%;
-  float: right;
-  position: relative;
-  z-index: 10;
+    height: 250px;
+    width: 244px;
+    float: right;
+    position: relative;
 }
